Change images folder directory to inside src.

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
- <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
+ <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
    <link rel="stylesheet" href="./style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" crossorigin="anonymous">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -70,7 +70,7 @@
     <div class="col-12 col-md-6 overflow-hidden d-flex justify-content-end align-items-center order-1 order-md-3 pt-5 pb-5">                    
         <div id="grey-background"></div>
       <div id="main-img-holder">
-         <img id="main-img" class="ml-0" src="../images/illustration-devices.svg" alt="mobile pc photo">
+         <img id="main-img" class="ml-0" src="./images/illustration-devices.svg" alt="mobile pc photo">
         </div>
       </div>
     </div>
